k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __PROJECT_NAME__
  namespace: __NAMESPACE_NAME__
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - __PROJECT_NAME__.dev.gke.acurast.com
      secretName: __PROJECT_NAME__-prod-tls
  rules:
    - host: __PROJECT_NAME__.dev.gke.acurast.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: explorer
                port:
                  number: 80
    - host: acurast-grafana.dev.gke.acurast.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 3000
